AZEA maybe fix dark mode.. again

--- a/tnnt_templates/static/sash/css/dark-style.css
+++ b/tnnt_templates/static/sash/css/dark-style.css
@@ -7,12 +7,12 @@
 /*Transparent variables*/
 body.dark-mode {
     color: #dedefd;
-    background-color: #1a1a3c;
+    background-color: #222;
 }
 
 body.dark-mode *::-webkit-scrollbar-thumb,
 body.dark-mode *:hover::-webkit-scrollbar-thumb {
-    background: #1a1a3c;
+    background: #222;
 }
 
 .dark-mode {
